# pocket-pluviometer

./: .gitignore  Dockerfile  gee_chuva2.ipynb  pyproject.toml
app/: database.py  main.py
app/schemas/: DailyPrecipitation.py  PluviometerInput.py
app/services/: get_data_google.py
